session4/manifests/ecom-app-example/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/security-groups: sg-0af5f72ce02a877b7
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:975050024946:certificate/e4e6567d-012e-4679-ad14-4ba3034a36b7
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-catalog-service
            port: 
              number: 80
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-service
            port: 
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service-service
            port: 
              number: 80
